backend/hyrto-schema/force-app/main/default/objects/Hyrto_Hub__c/Hyrto_Hub__c.object-meta.xml
<CustomObject>
 <label>Hyrto Hub</label>
 <pluralLabel>Hyrto Hubs</pluralLabel>
 <nameField>
  <label>Name</label>
  <type>Text</type>
 </nameField>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>