backend/hyrto-schema/force-app/main/default/objects/Hyrto_Hub__c/fields/BaseDeliveryFee__c.field-meta.xml
<CustomField>
 <fullName>BaseDeliveryFee__c</fullName><label>Base Delivery Fee</label><type>Currency</type>
 <precision>18</precision><scale>2</scale>
</CustomField>