backend/hyrto-schema/force-app/main/default/objects/Hyrto_Hub__c/fields/FarDeliveryFee__c.field-meta.xml
<CustomField>
 <fullName>FarDeliveryFee__c</fullName><label>Far Delivery Fee</label><type>Currency</type>
 <precision>18</precision><scale>2</scale>
</CustomField>