backend/hyrto-schema/force-app/main/default/objects/Hyrto_Hub__c/fields/FarRadiusKm__c.field-meta.xml
<CustomField>
 <fullName>FarRadiusKm__c</fullName><label>Far Radius (km)</label><type>Number</type>
 <precision>5</precision><scale>1</scale>
</CustomField>