backend/hyrto-schema/force-app/main/default/objects/Hyrto_Hub__c/fields/IsActive__c.field-meta.xml
<CustomField>
 <fullName>IsActive__c</fullName><label>Active</label><type>Checkbox</type>
 <defaultValue>false</defaultValue>
</CustomField>