backend/hyrto-schema/force-app/main/default/objects/Hyrto_Hub__c/fields/MaxDeliveryRadiusKm__c.field-meta.xml
<CustomField>
 <fullName>MaxDeliveryRadiusKm__c</fullName><label>Max Delivery Radius (km)</label><type>Number</type>
 <precision>5</precision><scale>1</scale>
</CustomField>