backend/hyrto-schema/force-app/main/default/objects/Hyrto_Hub__c/fields/MediumDeliveryFee__c.field-meta.xml
<CustomField>
 <fullName>MediumDeliveryFee__c</fullName><label>Medium Delivery Fee</label><type>Currency</type>
 <precision>18</precision><scale>2</scale>
</CustomField>