backend/hyrto-schema/force-app/main/default/objects/Hyrto_Hub__c/fields/MediumRadiusKm__c.field-meta.xml
<CustomField>
 <fullName>MediumRadiusKm__c</fullName><label>Medium Radius (km)</label><type>Number</type>
 <precision>5</precision><scale>1</scale>
</CustomField>