backend/hyrto-schema/force-app/main/default/objects/Hyrto_Hub__c/fields/PostalCode__c.field-meta.xml
<CustomField>
 <fullName>PostalCode__c</fullName><label>Postal Code</label><type>Text</type><length>10</length>
</CustomField>